--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.0.4",
     "morgan": "~1.9.1",
     "natural": "^8.0.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "openai": "^4.82.0"
   }
 }
