--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3400
 DATABASE_URL=mongodb+srv://admin:admin@cluster0.xqa99.mongodb.net/yttools?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=crtipcocodetechyttools
-# YOUTUBE_API_KEY=AIzaSyCOY-s-2ae4PyT6iLqgtx9670CKf1JGF34 --sanny
+YOUTUBE_API_KEY=AIzaSyCOY-s-2ae4PyT6iLqgtx9670CKf1JGF34
 # GEMINI_API_KEY=AIzaSyA0w5-nnKjyiRPeAYye9qicevdZ2zmGnZc --sanny
-YOUTUBE_API_KEY=AIzaSyAtqmKAquRxJBmG-wYMbR8Gk1uND0szKus
+# YOUTUBE_API_KEY=AIzaSyAtqmKAquRxJBmG-wYMbR8Gk1uND0szKus
 GEMINI_API_KEY=AIzaSyBBdxVGodeA3bhJjpt1873-JnptPtR88e8
