addition of the videoand the creator based

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ JWT_SECRET=crtipcocodetechyttools
 # YOUTUBE_API_KEY=AIzaSyAetm2qA54xxvJi5-4AZkuj323gZJnExPY
 GEMINI_API_KEY=AIzaSyBBdxVGodeA3bhJjpt1873-JnptPtR88e8
 YOUTUBE_API_KEY=AIzaSyAtqmKAquRxJBmG-wYMbR8Gk1uND0szKus
+RAZORPAY_KEY_ID=rzp_test_BDT2TegS4Ax6Vp
+RAZORPAY_KEY_SECRET=GMuyqoLdWIg6FtGAr0Eya552
+RAZORPAY_SUBSCRIPTION_PLAN_ID=your_subscription_plan_id
