--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "natural": "^8.0.1",
     "nodemon": "^3.0.2",
-    "openai": "^4.82.0"
+    "openai": "^4.82.0",
+    "razorpay": "^2.9.6"
   }
 }
